# ueventmonitor

./: README.md  ueventmonitor.spec
ueventmonitor-1.0/: Makefile.am  clean.sh  configure.ac
ueventmonitor-1.0/data/: Makefile.am  org.freedesktop.UeventMonitor.conf.in  org.freedesktop.UeventMonitor.service.in  org.freedesktop.UeventMonitor.xml  ueventmonitor.service.in
ueventmonitor-1.0/src/: Makefile.am  main.c  ueventlinuxdevice.c  ueventlinuxdevice.h  ueventmonitor.c  ueventmonitor.h
ueventmonitor-1.0/test/: monitor.py
